# senate-insight-lab

./: .gitignore  README.md  USAGE_GUIDE.md  example.env  flake.nix  main.py  pyproject.toml  requirements.txt
examples/: analysis_example.py  basic_usage.py  comprehensive_example.py
research/: tooling.md
scrappers/: __init__.py  senate_scrapper.py
senate_insight/: __init__.py  cli.py  orchestrator.py
senate_insight/analyzers/: __init__.py  insider_trading_detector.py
senate_insight/data_collectors/: __init__.py  congress_api.py  financial_data.py
senate_insight/models/: __init__.py  congress_member.py  financial_disclosure.py
senate_insight/utils/: config.py  database.py  logging_config.py
tests/: __init__.py  test_detector.py  test_main.py  test_models.py  test_senate_scrapper.py
